# native-hosting-extension

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh  native-hosting-extension.sln
.github/workflows/: cmake-multi-platform.yml  windows-build.yml
doc/: native-hosting-extensions.md  native-hosting.md  native-plugin-host.md  prompt.md
src/DemoApp/: CalculatorDemoService.cs  CalculatorService.cs  DemoApp.csproj  NativeAotPluginHost.cs  Program.cs
src/ManagedLibrary/: Calculator.cs  ManagedLibrary.csproj
src/ManagedLibrary2/: Class1.cs  LoggerFactory.cs  ManagedLibrary2.csproj
src/ManagedLibrary3/: DynamicCalculator.cs  ManagedLibrary3.csproj
src/NativeAotPluginHost/: NativeAotPluginHost.cs  NativeAotPluginHost.csproj  PluginHost.cs
src/NativeHost/: NativeHost.cs  NativeHost.csproj  NativeMethods.cs
src/NativePluginHost/: NativeMethods.cs  NativePluginHost.csproj  Plugin.cs  PluginHost.cs
src/demo/DemoApp/: DemoApp.csproj  NativeHosting.cs  Program.cs
src/managed/DemoLibrary/: Calculator.cs  DemoLibrary.csproj
src/native/: CMakeLists.txt  native_aot_plugin_host.cpp  native_aot_plugin_host.h  native_hosting.cpp  native_hosting.h
src/native_aot_plugin_host/: CMakeLists.txt  native_aot_plugin_host.cpp  native_aot_plugin_host.h
src/native_host/: CMakeLists.txt  init.runtimeconfig.json  native_host.cpp  native_host.h
src/native_plugin_host/: CMakeLists.txt  native_plugin_host.cpp  native_plugin_host.h  platform.h
tests/: CMakeLists.txt  native_host_assembly_test.cpp  native_host_basic_test.cpp  native_host_concurrency_test.cpp  native_host_delegate_test.cpp  native_host_function_test.cpp  native_host_tests.cpp  native_hosting_tests.cpp  test_utils.h
tests/TestLibrary/: TestClass.cs  TestLibrary.csproj
